# IsoLeadToolkit

./: .gitignore  README.md  README_PYQT5.md  V1V2.py  V1V2_reference.py  build.spec  config.py  control_panel.py  data.py  data_config.py  events.py  file_dialog.py  geochemistry.py  legend_dialog.py  localization.py  logger_setup.py  main.py  main_qt5.py  panel_dialogs.py  panel_export.py  panel_handlers.py  panel_utils.py  plotnine_dialog.py  pyproject.toml  session.py  sheet_dialog.py  state.py  style_manager.py  test_diff.py  test_qt5_imports.py  three_d_dialog.py  two_d_dialog.py  visualization.py
application/: __init__.py
core/: __init__.py  app.py  cache.py  config.py  legend_state.py  localization.py  overlay_state.py  session.py  state.py  state_gateway.py
data/: __init__.py  endmember.py  geochemistry.py  loader.py  mixing.py  plumbotectonics_data.py  provenance_ml.py  qt5_loader.py
docs/: CONTROL_PANEL_COMPARISON.md  PYQT5_MIGRATION_PLAN.md  PYQT5_PROGRESS.md  PYQT5_STATUS.md  architecture.md  data.md  dev_conventions.md  development_plan.md  export.md  geochemistry.md  ui.md  utils.md  visualization.md
locales/: check_untranslated.py  en.json  sync_locales.py  zh.json
panel_tabs/: __init__.py  algorithm_tab.py  geochemistry_tab.py  legend_tab.py  settings_tab.py  style_tab.py  tools_tab.py
scripts/: check_gateway_direct_state_assignments.py  check_gateway_generic_mutations.py  check_gateway_generic_mutations_in_tests.py  check_state_mutations.py  collect_debug_points.py  gateway_mutation_guard.py  replace_prints_with_logging.py  source_scan_guard.py
(+282 files in other folders)
