[project]
name = "isotopesanalyse"
version = "0.1.0"
description = "Isotopes analysis and visualization desktop application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "scikit-learn>=1.5.2",
    "umap-learn>=0.5.6",
    "pyinstaller>=6.17.0",
    "python-calamine>=0.6.1",
    "xlsxwriter>=3.2.9",
    "scienceplots>=2.2.0",
    "mpltern>=1.0.4",
    "python-ternary>=1.0.8",
    "pyqt5>=5.15",
    "pyqt5-qt5>=5.15",
]

[tool.isotopesanalyse.build]
spec = "build.spec"
command = "pyinstaller build.spec"
